<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="5dp"
        app:cardCornerRadius="5dp"
        android:layout_margin="5dp">

        <FrameLayout
            android:background="@drawable/card_edge"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/colorPrimaryDark"
            android:layout_margin="@dimen/size_3">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/chooseoption"
                    android:textSize="16sp"
                    android:textColor="@color/gray"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_marginTop="@dimen/size_20"
                    android:layout_marginBottom="@dimen/size_20"/>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cv_manual"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/size_40"
                    app:cardElevation="@dimen/size_10"
                    app:cardCornerRadius="@dimen/size_10"
                    android:layout_margin="@dimen/size_10">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/updatemanual"
                            android:textSize="@dimen/size_14"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:textColor="@color/colorPrimary"/>


                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cv_record"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/size_40"
                    app:cardElevation="@dimen/size_10"
                    app:cardCornerRadius="@dimen/size_10"
                    android:layout_margin="@dimen/size_10">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/record"
                        android:textSize="@dimen/size_14"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:textColor="@color/colorPrimary"/>


                </androidx.cardview.widget.CardView>

            </LinearLayout>
        </FrameLayout>

    </androidx.cardview.widget.CardView>


</LinearLayout>